[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=1]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=2]
[ext_resource path="res://mods/Timimimi.Mii/Assets/Node/Menu/MiiSelect.gd" type="Script" id=3]

[node name="MiiSelect" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -350.0
margin_right = 600.0
margin_bottom = 350.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Outline" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.403931

[node name="Panel" type="Panel" parent="Outline"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 1 )

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -192.0
margin_right = 400.0
margin_bottom = 278.0
window_title = "Select a .charinfo file."
mode_overrides_title = false
mode = 0
access = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -200.0
margin_right = 500.0
margin_bottom = 270.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
columns = 6

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.095
anchor_right = 0.5
anchor_bottom = 0.095
margin_left = -300.0
margin_right = 300.0
margin_bottom = 62.0
text = "Mii Selection"
align = 1
valign = 1

[node name="close_button" type="Button" parent="."]
anchor_left = 0.965488
anchor_top = -0.071448
anchor_right = 1.02488
anchor_bottom = 0.026176
margin_left = 0.12793
margin_top = -0.492264
margin_bottom = -5.44424
text = "x"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
[connection signal="pressed" from="close_button" to="." method="_CloseMenu"]
